test/expected/declare_puw3.out
declare x as pointer to unsigned width 3 bits
                                 ^
34: error: bit-fields can be only of integral types
